CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
SET(CMAKE_CXX_STANDARD 17)
PROJECT(taskrunner VERSION 0.0.0
    DESCRIPTION ""
    HOMEPAGE_URL ""
    LANGUAGES CXX)

OPTION(BUILDING_SHARED "compile for shared library" OFF)

SET(PROJECT_ROOT_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin/")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/")

INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/include/")
LINK_DIRECTORIES("${CMAKE_SOURCE_DIR}/lib/")

ADD_SUBDIRECTORY(src)

ADD_SUBDIRECTORY(third-party/logging)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
ADD_SUBDIRECTORY(test)
#ADD_SUBDIRECTORY(benchmark)